--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,9 @@
 @use './styles/forms';
 @use './styles/icons';
 
+// This can be deleted when the tutorials are done
+@use './styles/storybook-tutorials';
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -22,212 +25,4 @@
   50% {
     opacity: 0.5;
   }
-}
-
-.list-heading {
-  letter-spacing: 0.3em;
-  text-indent: 0.3em;
-  text-transform: uppercase;
-  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 800;
-  font-size: 11px;
-  padding-left: 15px;
-  line-height: 40px;
-  background: #f8f8f8;
-  color: #aaa;
-}
-
-.list-heading .icon-sync {
-  opacity: 1;
-  animation: spin 2s infinite linear;
-  display: inline-block;
-  margin-right: 4px;
-}
-
-.list-item {
-  font-size: 14px;
-  line-height: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  height: 3rem;
-  width: 100%;
-  background: white;
-  transition: all ease-out 150ms;
-}
-
-.list-item .title {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  flex: 1;
-}
-
-.list-item input[type="text"] {
-  background: transparent;
-  width: 100%;
-}
-
-.list-item input[type="text"]:focus {
-  cursor: text;
-}
-
-.pin-button {
-  width: 3rem;
-  height: 3rem;
-  background: transparent;
-  border: none;
-  text-align: center;
-  transition: all 200ms ease-in;
-  color: #eee;
-  font-size: 16px;
-  line-height: 3rem;
-  outline: none;
-}
-
-.pin-button:hover {
-  color: #2cc5d2;
-}
-.pin-button:focus {
-  outline-color: transparent;
-}
-
-.pin-button:active {
-  color: #555;
-}
-
-.list-item.TASK_PINNED .icon-star {
-  color: #2cc5d2;
-}
-
-.list-item.TASK_ARCHIVED input[type="text"] {
-  color: #a0aec0;
-  text-decoration: line-through;
-}
-
-.list-item:hover {
-  background-image: linear-gradient(to bottom, #e5f9f7 0%, #f0fffd 100%);
-}
-
-.list-item:hover .checkbox {
-  cursor: pointer;
-}
-
-.list-item + .list-item {
-  border-top: 1px solid #f0f9fb;
-}
-
-.list-item.checked input[type="text"] {
-  color: #ccc;
-  text-decoration: line-through;
-}
-
-.list-item.checked .delete-item {
-  display: inline-block;
-}
-
-.loading-item {
-  height: 3rem;
-  width: 100%;
-  background: white;
-  display: flex;
-  align-items: center;
-  line-height: 1rem;
-  padding-left: 16px;
-}
-
-.loading-item .glow-checkbox,
-.loading-item .glow-text span {
-  animation: glow 1.5s ease-in-out infinite;
-  background: #eee;
-  color: transparent;
-  cursor: progress;
-  display: inline-block;
-}
-
-.loading-item .glow-checkbox {
-  margin-right: 16px;
-  width: 12px;
-  height: 12px;
-}
-
-.loading-item + .loading-item {
-  border-top: 1px solid #f0f9fb;
-}
-
-.list-items {
-  position: relative;
-  background: white;
-  min-height: 288px;
-}
-
-.list-items .select-placeholder {
-  border: none;
-  width: 48px;
-}
-
-.wrapper-message {
-  position: absolute;
-  top: 45%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  width: auto;
-  height: auto;
-  transform: translate3d(0, -50%, 0);
-  text-align: center;
-}
-
-.wrapper-message [class^="icon-"],
-.wrapper-message [class*=" icon-"] {
-  font-size: 48px;
-  line-height: 56px;
-  color: #2cc5d2;
-  display: block;
-}
-
-.wrapper-message .title-message {
-  font-size: 16px;
-  line-height: 24px;
-  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 800;
-  color: #4a5568;
-}
-
-.wrapper-message .subtitle-message {
-  font-size: 14px;
-  line-height: 20px;
-  color: #4a5568;
-}
-
-.page.lists-show {
-  min-height: 100vh;
-  background: white;
-}
-
-.page.lists-show nav {
-  background: #d3edf4;
-  padding: 1.5rem 1.25rem;
-  text-align: center;
-}
-
-@media screen and (min-width: 40em) {
-  .page.lists-show nav {
-    text-align: left;
-  }
-}
-
-.page.lists-show nav .title-page {
-  font-size: 20px;
-  line-height: 24px;
-  line-height: 2rem;
-  cursor: pointer;
-  white-space: nowrap;
-  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-weight: 800;
-  color: #1c3f53;
-  display: inline-block;
-  vertical-align: top;
-  max-width: 100%;
 }
