--- a/src/app/containers/task-list/task-list.component.html
+++ b/src/app/containers/task-list/task-list.component.html
@@ -1,26 +1,5 @@
-<div class="list-items">
-  @for (task of tasksInOrder(); track task.id) {
-    <app-task
-      [task]="task"
-      (onArchiveTask)="onArchiveTask.emit($event)"
-      (onPinTask)="onPinTask.emit($event)"
-    />
-  }
-  @if (!loading() && tasksInOrder().length === 0) {
-    <div class="wrapper-message">
-      <span class="" icon-check></span>
-      <p class="title-message">You have no tasks</p>
-      <p class="subtitle-message">Sit back and relax</p>
-    </div>
-  }
-  @if (loading()) {
-    @for (i of [1, 2, 3, 4, 5]; track i) {
-      <div class="loading-item">
-        <span class="glow-checkbox"></span>
-        <span class="glow-text">
-          <span>Loading</span> <span>cool</span> <span>state</span>
-        </span>
-      </div>
-    }
-  }
-</div>
+<app-pure-task-list
+  [tasks]="tasks$ | async"
+  (onArchiveTask)="archiveTask($event)"
+  (onPinTask)="pinTask($event)"
+></app-pure-task-list>
