Added index.scss as barrel files for all stylesheets

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,31 +1,1 @@
-@use "./styles/variables";
-@use "./styles/typography";
-@use "./styles/global";
-@use "./styles/forms";
-@use "./styles/icons";
-@use "./styles/buttons";
-
-// This can be deleted when the tutorials are done
-@use "./styles/storybook-tutorials";
-
-// For loaders -- also on tutorial component
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(359deg);
-  }
-}
-
-@keyframes glow {
-  0%,
-  100% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0.5;
-  }
-}
+@use "./styles/index" as *;
