--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -4,7 +4,8 @@
 .btn {
   display: inline-block;
   padding: 0.5rem 1rem;
-  font-size: 1rem;
+  // font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 1.5;
   border-radius: v.$base-radius;
   transition: all 0.2s ease-in-out;
