--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 @forward "variables";
+@forward "mixins";
 @forward "typography";
 @forward "global";
 @forward "forms";
 @forward "icons";
 @forward "buttons";
+@forward "banners";
