--- a/src/styles/_banners.scss
+++ b/src/styles/_banners.scss
@@ -22,7 +22,7 @@
     height: $base-height-mobile;
     overflow: hidden;
 
-    @container profile-banner (min-width: 576px ) {
+    @include media-container-up("sm", "profile-banner") {
       position: relative;
       height: $base-height-desktop;
     }
@@ -49,7 +49,7 @@
         rgba(0, 0, 0, 0)
       );
 
-      @container profile-banner (min-width: 576px ) {
+      @include media-container-up("sm", "profile-banner") {
         display: block;
       }
     }
@@ -66,7 +66,7 @@
     margin: -80px auto 0 auto;
     gap: 0.5rem;
 
-    @container profile-banner (min-width: 576px ) {
+    @include media-container-up("sm", "profile-banner") {
       position: absolute;
       grid-template-columns: auto 1fr;
       width: 80%;
@@ -84,7 +84,7 @@
     object-fit: cover;
     border-radius: 100%;
 
-    @container profile-banner (min-width: 576px ) {
+    @include media-container-up("sm", "profile-banner") {
       max-width: 100%;
     }
   }
@@ -92,16 +92,16 @@
   &__info {
     color: v.$text-on-light;
 
-    @container profile-banner (min-width: 576px ) {
+    @include media-container-up("sm", "profile-banner") {
       color: v.$text-on-dark;
     }
 
     .name {
-      font-size: clamp(1.5rem, 1.5vw + 0.5rem, 2rem);
+      font-size: clamp(1.5rem, 2.5vw + 0.5rem, 2rem);
     }
 
     .short-description {
-      font-size: clamp(0.75rem, 1.5vw + 0.5rem, 1.2rem);
+      font-size: clamp(0.75rem, 2.5vw + 0.5rem, 1.2rem);
     }
   }
 }
